--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,9 @@ install:
     fi
   - |
     if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
-      brew update && brew upgrade cmake || brew install cmake
+      brew update
+      brew upgrade cmake && \
+      brew install sdl2
     fi
 
 script:
